--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
 ---
 
-name: "CI: Format"
+name: CI
 
 on:
   - pull_request
   - push
 
 jobs:
-  build:
+  Format:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,3 +18,15 @@ jobs:
 
     - name: Format
       run: docker-compose run houston format
+
+  Test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Compile
+      run: docker-compose build
+
+    - name: Test
+      run: docker-compose run houston test
