Revert dockerfile logging

--- a/Dockerfile-development
+++ b/Dockerfile-development
@@ -23,8 +23,7 @@ RUN cd /opt/houston && \
   MIX_ENV=dev mix deps.compile --all && \
   MIX_ENV=test mix deps.compile --all && \
   cd /opt/houston/apps/houston_dashboard/assets && \
-  npm ci && \
-  ls /opt/houston/apps/houston_dashboard/assets/node_modules/
+  npm ci
 
 EXPOSE 4000
 
