--- a/assets/package.json
+++ b/assets/package.json
@@ -12,26 +12,27 @@
     "lint:css": "stylelint styles/**/*.scss"
   },
   "dependencies": {
+    "nprogress": "^0.2.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "nprogress": "^0.2.0"
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
-    "babel-loader": "^8.2.1",
-    "copy-webpack-plugin": "^6.3.2",
-    "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.1",
-    "node-sass": "^5.0.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.4",
+    "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^1.3.3",
+    "node-sass": "^6.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^11.1.0",
     "standard": "^16.0.3",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "5.6.0",
-    "webpack-cli": "^4.2.0"
+    "stylelint": "^13.13.0",
+    "stylelint-config-standard": "^22.0.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "5.37.0",
+    "webpack-cli": "^4.3.1"
   }
 }
